kubernetes/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emt-app-deployment-backend
  namespace: emt-app-namespace
spec:
  replicas: 2  
  selector:
    matchLabels:
      app: emt-app
      tier: backend
  template:
    metadata:
      labels:
        app: emt-app
        tier: backend
    spec:
      containers:
      - name: backend
        image: miabosheva/project-emt-backend:latest
        ports:
        - containerPort: 9091  
      imagePullSecrets:
        - name: docker-auth
