kubernetes/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emt-app-deployment-frontend
  namespace: emt-app-namespace
spec:
  replicas: 2  
  selector:
    matchLabels:
      app: emt-app
      tier: frontend
  template:
    metadata:
      labels:
        app: emt-app
        tier: frontend
    spec:
      containers:
      - name: frontend
        image: miabosheva/project-emt-frontend:latest
        ports:
        - containerPort: 3000  
      imagePullSecrets:
        - name: docker-auth
