kubernetes/statefulset-backend.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: emt-app-statefulset-backend
  namespace: emt-app-namespace
spec:
  serviceName: emt-app-service-backend
  replicas: 2 
  selector:
    matchLabels:
      app: emt-app
      tier: backend
  template:
    metadata:
      labels:
        app: emt-app
        tier: backend
    spec:
      containers:
        - name: backend
          image: miabosheva/project-emt-backend:latest
          ports:
            - containerPort: 9091 
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: local-path
        resources:
          requests:
            storage: 1Gi
