kubernetes/statefulset-frontend.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: emt-app-statefulset-frontend
  namespace: emt-app-namespace
spec:
  serviceName: emt-app-service-frontend
  replicas: 2 
  selector:
    matchLabels:
      app: emt-app
      tier: frontend
  template:
    metadata:
      labels:
        app: emt-app
        tier: frontend
    spec:
      containers:
        - name: frontend
          image: miabosheva/project-emt-frontend:latest
          ports:
            - containerPort: 3000
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: local-path
        resources:
          requests:
            storage: 1Gi
