kubernetes/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: emt-app-statefulset
  namespace: emt-app-namespace
spec:
  serviceName: emt-app-service
  replicas: 2 
  selector:
    matchLabels:
      app: emt-app
  template:
    metadata:
      labels:
        app: emt-app
    spec:
      containers:
        - name: backend
          image: miabosheva/project-emt-backend:latest
          ports:
            - containerPort: 9091 
        - name: frontend
          image: miabosheva/project-emt-frontend:latest
          ports:
            - containerPort: 3000
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: standard
        resources:
          requests:
            storage: 1Gi
