kubernetes/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: emt-app-service-backend
  namespace: emt-app-namespace
spec:
  # type: LoadBalancer  
  selector:
    app: emt-app
    tier: backend
  ports:
   -  protocol: TCP
      port: 9091  # backend
      targetPort: 9091
  type: NodePort
