kubernetes/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: emt-app-service-frontend
  namespace: emt-app-namespace
spec:
  # type: LoadBalancer  
  selector:
    app: emt-app
    tier: frontend
  ports:
   -  protocol: TCP
      port: 3000       
      targetPort: 3000 
  type: NodePort
