kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: emt-app-service
  namespace: emt-app-namespace
spec:
  type: NodePort  
  selector:
    app: emt-app
  ports:
    - name: backend
      protocol: TCP
      port: 9091  # backend
      targetPort: 9091
    - name: frontend
      protocol: TCP
      port: 3000  # frontend
      targetPort: 3000
