kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emt-app-ingress
  namespace: emt-app-namespace
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/router.middlewares: default-mcu-all@kubernetescrd
spec:
  rules:
    - host: emt-app.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: emt-app-service-backend
                port:
                  number: 9091
          - path: /
            pathType: Prefix
            backend:
              service:
                name: emt-app-service-frontend
                port:
                  number: 3000
